--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'org.postgresql:postgresql'
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+
 
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     implementation('org.springframework.boot:spring-boot-starter-validation')
